--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : "摩雀科技" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "灏瀚科技" %></title>
   <%= csrf_meta_tags %>
   <meta charset="utf-8"/>
   <meta name="description" content="Common form elements and layouts"/>
