--- a/app/views/pay/layouts/application.html.erb
+++ b/app/views/pay/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en" class="en">
   <head>
     <meta charset="UTF-8">
-    <title><%= content_for?(:title) ? yield(:title) : "摩雀科技小程序" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "灏瀚科技小程序" %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="format-detection" content="telphone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
