--- a/app/views/layouts/_partialLeftNav.html.erb
+++ b/app/views/layouts/_partialLeftNav.html.erb
@@ -55,7 +55,7 @@
 
           <%= link_to_left_nav( '首页设置', ec_slides_path, current_page?(ec_slides_path)) if roles.include?(3) %>
 
-          <%= link_to_left_nav( '首页设置', payment_settings_path, current_page?(payment_settings_path)) if roles.include?(4) %>
+          <%= link_to_left_nav( '支付设置', payment_settings_path, current_page?(payment_settings_path)) if roles.include?(4) %>
 
         </ul>
       </li>
