--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     window.qiniu_token = '<%= qiniu_pictures_upload_token %>'
   <% end %>
 
-  <%= render 'application/baidu_tongji' %>
+  <%#= render 'application/baidu_tongji' %>
 </head>
 
 <body>
