--- a/app/views/layouts/application_pop.html.erb
+++ b/app/views/layouts/application_pop.html.erb
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>标途科技后台管理系统</title>
+  <title>灏瀚科技后台管理系统</title>
   <%= stylesheet_link_tag 'application', 'application_1', 'ace.min', 'application_2', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 
-  <%= render 'application/baidu_tongji' %>
+  <%#= render 'application/baidu_tongji' %>
 </head>
 <body class="modal-body-bg">
   <%= yield %>
