--- a/app/views/account_mailer/password_reset.html.erb
+++ b/app/views/account_mailer/password_reset.html.erb
@@ -34,7 +34,7 @@
     <p style="color:red">此链接半小时之内有效。</p>
     <p>感谢您对标途科技的支持！</p>
     <p>我们的客服人员联系方式：</p>
-    <p>E-mail：service@biaotu.net</p>
+    <p>E-mail：service@zhishangtech.top</p>
     <!-- <p>电话：4000-365-711</p> -->
     <p class="aright"  style="text-align:right;">标途科技</p>
     <p class="aright"  style="text-align:right;"><%= Time.now.to_s %></p>
