--- a/app/views/wap/orders/index.html.erb
+++ b/app/views/wap/orders/index.html.erb
@@ -154,7 +154,7 @@
                 var v = list[i];
                 count += v.qty; // 累加数量
                 price += v.qty*v.price; // 累加金额
-                pic_url = "http://heba.biaotu.net/"+v.pic_key+"?imageMogr2/auto-orient/thumbnail/!210x"
+                pic_url = "http://heba.zhishangtech.top/"+v.pic_key+"?imageMogr2/auto-orient/thumbnail/!210x"
 
                 str += '<a href="/wap/orders/'+v.ec_order_id+'"><div class="i_proc">\
                     <img src="'+pic_url+'" class="i_pimg">\
