--- a/app/views/ec/slides/index.html.erb
+++ b/app/views/ec/slides/index.html.erb
@@ -189,9 +189,11 @@
             <table calss="table table-striped table-bordered table-hover" style="margin-top: 15px">
               <tr>
                 <td style="width: 210px">
-                  <a href="http://heba.zhishangtech.top/FmFvq795O28Rw-JFEPfg_TGg_KSW" target="_blank"><img src="http://heba.zhishangtech.top/FmFvq795O28Rw-JFEPfg_TGg_KSW" alt="" style="width: 180px;height: 320px"></a></td>
+                  <a href="http://zhishang.zhishangtech.top/FmFvq795O28Rw-JFEPfg_TGg_KSW" target="_blank"><img src="http://zhishang.zhishangtech.top/FmFvq795O28Rw-JFEPfg_TGg_KSW" alt="" style="width: 180px;height: 320px"></a>
+                </td>
                 <td>
-                  <a href="http://heba.zhishangtech.top/Fo4QRSSof9k3vMFCifhs-eBjJRgB" target="_blank"><img src="http://heba.zhishangtech.top/Fo4QRSSof9k3vMFCifhs-eBjJRgB" alt="" style="width: 180px;height: 320px"></a></td>
+                  <a href="http://zhishang.zhishangtech.top/Fo4QRSSof9k3vMFCifhs-eBjJRgB.jpeg" target="_blank"><img src="http://zhishang.zhishangtech.top/Fo4QRSSof9k3vMFCifhs-eBjJRgB.jpeg" alt="" style="width: 180px;height: 320px"></a>
+                </td>
               </tr> 
               <tr style="text-align: center;height: 40px">
                 <td><label><%= f.radio_button :ec_template_id, 1, :checked => current_user.ec_template_id == 1 %>&nbsp;&nbsp;双列</label></td>
